[gd_scene load_steps=12 format=3 uid="uid://b5rlfsjjhmiop"]

[ext_resource type="Script" path="res://minijeu_12/centrifuge_game.gd" id="1_jcujt"]
[ext_resource type="PackedScene" uid="uid://chip3scg6k3tt" path="res://minijeu_12/fleche.tscn" id="2_74skg"]
[ext_resource type="PackedScene" uid="uid://7r48ipj653l" path="res://minijeu_12/centrifuge.tscn" id="2_jfctw"]
[ext_resource type="Texture2D" uid="uid://b60fd33ukdhm3" path="res://minijeu_12/figures/Rougetube@4x.png" id="3_fcvp4"]
[ext_resource type="Texture2D" uid="uid://033h6jop4xsd" path="res://minijeu_12/figures/up.jpg" id="3_ijjod"]
[ext_resource type="Texture2D" uid="uid://b8x5g6pmqlmpw" path="res://minijeu_12/figures/down.jpg" id="4_0vhkg"]
[ext_resource type="Texture2D" uid="uid://vv7n4f5bseb1" path="res://minijeu_12/figures/Verttube@4x.png" id="4_mvbth"]
[ext_resource type="Texture2D" uid="uid://iqmfoflcdbbt" path="res://minijeu_12/figures/Rougetubedessus@4x.png" id="7_c4711"]
[ext_resource type="Texture2D" uid="uid://toboee6rq7xa" path="res://minijeu_12/figures/Verttubedessus@4x.png" id="8_aq3cv"]
[ext_resource type="Texture2D" uid="uid://dmjp8pa51ootx" path="res://minijeu_12/figures/Bleutubedessus@4x.png" id="10_ljfug"]
[ext_resource type="Texture2D" uid="uid://coahnf4hlreac" path="res://minijeu_12/figures/Rosetubedessus@4x.png" id="11_lknrv"]

[node name="centrifuge_game" type="Node"]
script = ExtResource("1_jcujt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
color = Color(0.870607, 0.998954, 0.983926, 1)

[node name="fleche" parent="." instance=ExtResource("2_74skg")]
position = Vector2(837, 297)

[node name="centrifuge" parent="." instance=ExtResource("2_jfctw")]
position = Vector2(457, 322)

[node name="tubes" type="HBoxContainer" parent="."]
layout_direction = 1
offset_left = 920.0
offset_top = 192.0
offset_right = 1985.0
offset_bottom = 1053.0
scale = Vector2(0.206191, 0.205138)
size_flags_horizontal = 8

[node name="red" type="Button" parent="tubes"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("3_fcvp4")
flat = true

[node name="green" type="Button" parent="tubes"]
layout_mode = 2
icon = ExtResource("4_mvbth")
flat = true

[node name="turn" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -110.0
offset_right = 108.0
offset_bottom = 110.0
grow_vertical = 2

[node name="up" type="Button" parent="turn"]
layout_mode = 2
icon = ExtResource("3_ijjod")

[node name="down" type="Button" parent="turn"]
layout_mode = 2
icon = ExtResource("4_0vhkg")

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[node name="time" type="Label" parent="TEXT"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="explanation" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.00392157, 0.745098, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -38.5
offset_right = 63.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start
"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -77.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[node name="blue" type="Sprite2D" parent="."]
visible = false
position = Vector2(180, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("10_ljfug")

[node name="pink" type="Sprite2D" parent="."]
visible = false
position = Vector2(2.08165e-12, 180)
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_lknrv")

[node name="red" type="Sprite2D" parent="."]
visible = false
position = Vector2(637, 322)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_c4711")

[node name="red_button" type="Button" parent="red"]
offset_left = -353.0
offset_top = -327.0
offset_right = 327.0
offset_bottom = 333.0
flat = true
expand_icon = true

[node name="green" type="Sprite2D" parent="."]
visible = false
position = Vector2(637, 322)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_aq3cv")

[node name="green_button" type="Button" parent="green"]
offset_left = -353.0
offset_top = -327.0
offset_right = 327.0
offset_bottom = 333.0
flat = true
expand_icon = true

[connection signal="pressed" from="tubes/red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="tubes/green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="turn/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="turn/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="red/red_button" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="green/green_button" to="." method="_on_green_button_pressed"]
